created new user form

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,16 +9,16 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <body class='Site'>
-  <nav class="navbar navbar-default navbar-static-top">
-   <div class="container" color="#f7f7f7">
-      <ul class="nav nav-tabs">
-  <li role="presentation" class="active"><a href="#">Home</a></li>
-  <li role="presentation"><a href="#">About Me</a></li>
-  <li role="presentation"><a href="#">Portfolio</a></li>
-  <li role="presentation"><a href="#">Contact</a></li>
+<div class="container navbar"  >
+    <ul class="nav nav-tabs">
+    <li role="presentation" style="text-align:center" class="active"><a href="/">Home</a></li>
+    <li role="presentation"><a href='/about'>About JWolff</a></li>
+    <li role="presentation"><a href="#">Portofilo</a></li>
+    <li role="presentation"><a href="#">Comissions</a></li>
+    <li role="presentation"><a href="#">Shop</a></li>
+    <li role="presentation"><a href="#">Contact</a></li>
   </ul>
 </div>
-</nav>
 
     <%= yield %>
   <main class='Site-content'></main>
